# Housing-Price-Prediction

./: MLmodel.ipynb  README.md  app.py  pyproject.toml
static/: style.css
templates/: index.html
